--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,20 @@
 body {
-    background-color: rgb(86, 86, 255);
+    background-color: rgb(121, 121, 121);
+}
+
+h1 {
+    text-align: center;
+    color:green;
+    font-size: 50px;
+    border: 2px solid black;
+    outline: black solid 10px;
+    margin: auto;  
+    padding: 20px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    color: red;
 }
